perbaikan htaccess untuk mendukung rewrite url
- penambahan .htaccess untuk mengabaikan direktori css dari rewrite url
- perbaikan link css untuk mendukung rewrite url

Signed-off-by: zieru <zie_777@live.com>

--- a/.htaccess
+++ b/.htaccess
@@ -1,23 +1,13 @@
 RewriteEngine On
-RewriteRule ^([^/]*)/([^/]*)\.html$ /index.php?sub=$1&act=$2 [L]
-###Start Kloxo PHP config Area
-### Please Don't edit these comments or the content in between. kloxo uses this to recognize the lines it writes to the the file. If the above line is corrupted, it may fail to recognize them, leading to multiple lines.
-### begin content - please not remove this line
+# not rewrite css, js and images
+RewriteCond %{REQUEST_URI} !\.(?:css|js|jpe?g|gif|png)$ [NC]
 
-### MR -- attention
-### 1. Move '#<Ifmodule !mod_php5.c>' until '#</Ifmodule>' on
-###    above '###Start Kloxo PHP config Area'
-### 2. Remove # in front of '#<Ifmodule !mod_php5.c>' and '#</Ifmodule>'
-###    on point (1)
-### 3. Remove # in front of 'AddHandler x-httpd-php52' to activate secondary-php
-###    on point (1)
-### 4. Or Remove # in front of 'AddHandler x-httpd-php' to activate primary-php
-###    on point (1) if select suphp_worker/_event for primary-php
 
-#<Ifmodule !mod_php5.c>
-    #AddHandler x-httpd-php52 .php
-    #AddHandler x-httpd-php .php
-#</Ifmodule>
+RewriteCond %{REQUEST_URI} !^/learning/.*$
+RewriteRule ^([^/]*)/$ /learning/index.php?sub=$1 [L]
+
+RewriteRule ^([^/]*)/([^/]*)$ /learning/index.php?sub=$1&act=$2 [L]
+RewriteRule ^([^/]*)/([^/]*)/([^/]*)$ /learning/index.php?sub=$1&act=$2&hash=$3 [L]
 
 <Ifmodule mod_php5.c>
     php_value upload_max_filesize 16M
@@ -40,8 +30,3 @@ RewriteRule ^([^/]*)/([^/]*)\.html$ /index.php?sub=$1&act=$2 [L]
     php_flag cgi.force_redirect on
     php_flag enable_dl on
 </Ifmodule>
-
-### end content - please not remove this line
-
-###End Kloxo PHP config Area
-
